@@ -5,6 +5,7 @@
     * User can disable confirm dialog which appears before installing
     * Re-write the introduction of texlive
     * Can refresh installing state of software items
+    * Config.get_login_window_background() return None rather than raise exception
 
 2010-07-10 CHEN Yangyang <skabyy@gmail.com>
 
